--- a/src/components/UI/FormBackground.module.css
+++ b/src/components/UI/FormBackground.module.css
@@ -8,7 +8,7 @@
     align-items: center;
     max-width: 800px;
     border-radius: 6px;
-    padding: 20px;
+    padding: 2rem;
     box-shadow: 0px 2px 5px 2px rgba(0, 0, 0, 0.2);
 }
 
@@ -28,8 +28,8 @@
 
 @media only screen and (max-width: 1000px) {
     .formConatiner {
-        margin: 0 auto;
-        padding: 0;
-        width: 90% !important;
+        padding: 2rem;
+        width: 90vw !important;
+        max-width: 90vw !important;
     }
 }
